<resources>
    <string name="app_name">Zarina Design</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_text">Not have account? Register</string>
    <string name="register">Register</string>
    <string name="have_acc">Already have a account? Login</string>
    <string name="username">Username</string>
    <string name="phone">Tel raqami</string>
    <string name="userDisabled">Foydalanuvchi faollashtirilmagan</string>
    <string name="userWait">Faollashtirishni kuting…</string>
    <string name="backToLogin">Login sahifaga qaytish</string>
    <string name="userStatus">Users</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="productOrderStatus">Holat</string>
    <string name="todo">TODO</string>
    <string name="confirm_password">Confirm password</string>
    <string name="chosen">Tanlash</string>
    <string name="add_product">Mahsulot +</string>
    <string name="title">Parda Nomi</string>
    <string name="description">Izoh</string>
    <string name="category">Kategoriyani tanlang</string>
    <string name="quantity">Miqdori</string>
    <string name="price">Narxi</string>
    <string name="discount">Chegirma</string>
    <string name="disPrice">Chegirma narxi</string>
    <string name="disPriceNote">Chegirma izohi</string>
    <string name="location">Joyi</string>
    <string name="products">Mahsulotlar</string>
    <string name="orders">Smetalar</string>
    <string name="disc_eg">10 % off</string>
    <string name="search">Qidiruv</string>
    <string name="product_details">Mahsulot haqida</string>
    <string name="edit_product">O\'zgartirish</string>
    <string name="showing_all">Hammasini ko\'rsatish</string>
    <string name="save_me">Saqlash</string>
    <string name="cutting">Kesish</string>
    <string name="barcode">Barcode</string>
    <string name="sumProductOrder">summa</string>
    <string name="reserve">Bron qilish</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="addedAt">Qo\'shilgan vaqt</string>
    <string name="editAt">O\'zgargan vaqti</string>
    <string name="checkChB">Tekshirish</string>
    <string name="select">Tanlang</string>
    <string name="user_type">User type</string>
    <string name="cost">Tannarx</string>
    <string name="select_cat">Kategoriya</string>
    <string name="select_loc">Joylashuvini tanlang</string>
    <string name="select_user_type">User turi</string>
    <string name="empty">Mahsulotlar yo\'q\n</string>
    <string name="add_len">Uzunligini kiriting</string>
    <string name="addedTxt">Qo\'shdi</string>
    <string name="editTxt">O\'zgardi</string>
    <string name="by">Foydalanuvchi</string>
    <string name="add_disc_txt">Chegirma qo\'shish</string>
    <string name="add_disc">Chegirma miqdori</string>
    <string name="add_disc_note">Chegirma nomi</string>
    <string name="successful">Muvaffaqqiyatli bajarildi!</string>
    <string name="sm_error">Muammo bor: </string>
    <string name="back">Orqaga: </string>
    <string name="cancel">Bekor qilish</string>
    <string name="wait">Biroz kuting</string>
    <string name="loading">Yuklanmoqda</string>
    <string name="logout">Logging Out User…</string>
    <string name="sale">Chegirma</string>
    <string name="no_parts">Kusoklari yo\'q yoki yuklanmoqda</string>
    <string name="meas">o\'lchov birligi</string>
    <string name="add_order">Smeta qo\'shish</string>
    <string name="orderNumber">Smeta raqami</string>
    <string name="orderName">Mijoz ismi</string>
    <string name="orderSum">Smeta summasi</string>
    <string name="orderLoc">Mijoz manzili</string>
    <string name="orderDeadline">Muddat</string>
    <string name="orderDesc">Izoh</string>
    <string name="payHistory">To\'lov tarixi</string>
    <string name="addExtrasTotal">Total</string>
    <string name="orderZaklad">Zaklad</string>
    <string name="orderLoan">Qarz</string>
    <string name="room">Xona qo\'shish</string>
    <string name="designerPercent">Diz foizi</string>
    <string name="designerSum">Diz foydasi</string>
    <string name="designerPayStatusOff">Pulni olmadi</string>
    <string name="designerPayStatusOn">Pulni Oldi</string>
    <string name="orderType">Smeta turi</string>
    <string name="add_object">Xona +</string>
    <string name="addWidth">Enini kiriting</string>
    <string name="addHeight">Bo\'yini kiriting</string>
    <string name="payHistoryOpen">To\'lov tarixi ochish</string>
    <string name="payHistoryClose">To\'lov tarixi yopish</string>
    <string name="orderObjectsOpen">Xonalar ko\'rsatish</string>
    <string name="orderObjectsClose">Xonalar yopish</string>
    <string name="orderRoom">Xona</string>
    <string name="orderObject">Etaj</string>
    <string name="orderRoomWidth">Eni</string>
    <string name="orderRoomHeight">Balandligi</string>
    <string name="something">Nimadir</string>
    <string name="edit_order">Smeta o\'zgartirish</string>
    <string name="height">Bo\'yi</string>
    <string name="mass">1 metrga kilosi</string>
    <string name="company">Firmasi</string>
    <string name="len">Uzunligi</string>
    <string name="prMass">Og`irligi</string>
    <string name="orderCat">Order cat</string>
    <string name="orderBy">Smeta egasi</string>
    <string name="orderStatus">Yangi</string>
    <string name="object_details">Obyekt haqida</string>
    <string name="extra">Qo\'shimcha</string>
    <string name="title_activity_users_list">UsersListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <style name="abbos">Abbos akaniki?</style>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
    </string>
    <string name="id">ID</string>
    <string name="users">Users</string>
    <string name="setActive">Enable</string>
    <string name="cuttingHistoryParts">Tarix</string>
    <string name="setting">Ustanovka</string>
    <string name="settingPrice">$ Ustanovkasi</string>
    <string name="sewing">Poshiv</string>
    <string name="sewingPrice">$ Poshivga</string>
    <string name="cutParts">kesilgan kusoklar:</string>
    <string name="designer">Dizayner</string>
    <string name="client">Mijoz</string>
    <string name="_00ps">OOPS</string>
    <string name="no_internet">Internet yo\'q</string>
    <string name="check_connection">Aloqani tekshiring</string>
    <string name="retry">Tekshirish</string>
    <string name="info">Info</string>
    <string name="allSum">Umumiy summa</string>
    <string name="getSum">Hisoblash</string>
    <string name="isReserve">Bron qilish</string>
    <string name="byUser">User tomonidan</string>
    <string name="selectColor">Rang tanlang</string>
    <string name="color">Rang</string>
    <string name="qoldiqlen">Qoldiq kusok</string>
    <string name="otchotlar">Otchot</string>
    <string name="otchotTitle">Hisobot oyi</string>
    <string name="xarajatlarOpen">Xarajatlar ro\'yxatini ochish</string>
    <string name="xarajatlarClose">Xarajatlar ro\'yxatini yopish</string>
    <string name="orderHistoryOpen">Smetalar ro\'yxati ochish</string>
    <string name="orderHistoryClose">Smetalar ro\'yxati yopish</string>
    <string name="reason">Sabab</string>
    <string name="add_xarajat">Xarajat +</string>
    <string name="otchotDate">Otchot sanasi</string>
    <string name="countChiqqanOrders">Chiqqan smetalar soni</string>
    <string name="countNewOrders">Yangi smetalar soni</string>
    <string name="sumChiqqanOrder">Chiqqan smetalar summasi</string>
    <string name="costChiqqanOrder">Chiqqan smetalar tannarxi</string>
    <string name="sumXarajat">Xarajatlar summasi</string>
    <string name="sum">Summa</string>
    <string name="countYopilganOrders">Yopilgan smetalar soni</string>
    <string name="sumYopilganOrder">Yopilgan smetalar summasi</string>
    <string name="costYopilganOrder">Yopilgan smetalar tannarxi</string>
    <string name="orderCost">Tannarxi</string>
    <string name="turkiya">Turkiya ?</string>
    <string name="abbos_akanikimi">Abbos akanikimi ?</string>
    <string name="topilishi">Topilishi</string>
    <string name="isCheck">Tekshirildi</string>
    <string name="unChecked">Tekshirilmagan</string>
    <string name="maksimal_0m">Maksimal: 0m</string>
    <string name="uzunlik_m">Uzunlik (m)</string>
    <string name="ostatka_olindi">Bor</string>
</resources>