<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <ImageView
        android:src="@drawable/ic_wifi_off"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_00ps"
        android:textStyle="bold"
        android:textSize="38sp"
        android:textColor="#787878"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#777777"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_connection"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#777777"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_retry"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textAllCaps="true"
        android:text="@string/retry"
        android:background="@drawable/shape_btn"
        />
</LinearLayout>